--- a/animals_update/localisation/rel_gov_and_titles.csv
+++ b/animals_update/localisation/rel_gov_and_titles.csv
@@ -48,6 +48,8 @@ Duck_feudal_gov;Duck's feodality;Féodalité canard;;;;;;;;;;;;x
 Duck_feudal_gov_desc;Government made by ducks for ducks;Gouvernement fait par les canards pour les canards;;;;;;;;;;;;x
 Eleph_feudal_gov;Elephant's feodality;Féodalité éléphantine;;;;;;;;;;;;x
 Eleph_feudal_gov_desc;Government made by elephant for elephant;Gouvernement fait par les éléphant pour les éléphant;;;;;;;;;;;;x
+cat_feudal_gov;Cat's feodality;Féodalité des chats;;;;;;;;;;;;x
+cat_feudal_gov_desc;Government made by cats for cats;Gouvernement fait par les chats pour les chats;;;;;;;;;;;;x
 
 ###minor titles
 title_bear_children;Honor child;Enfant d'honneur;;;;;;;;;;;;x
