--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -186,6 +186,7 @@ eleph_forced_conversion;Forced conversion;Conversion forcé;;;;;;;;;;;;x
 #character modifier
 cat_no_decadence_penalty_opinion;Public decadence;Décadance publique;;;;;;;;;;;;x
 cat_no_decadence_penalty_revolt;Popular decadence;Décadance populaire;;;;;;;;;;;;x
+cat_decadence_bonus;Popular cat;Chat populaire;;;;;;;;;;;;x
 
 #holding modifier
 cat_controlled_holding;Controlled by cats;Contrôlé par des chats;;;;;;;;;;;;x
