--- a/animals_update/localisation/society.csv
+++ b/animals_update/localisation/society.csv
@@ -11,6 +11,6 @@ cat_intrigue_society_rank_3_male;Responsable;Responsable;;;;;;;;;;;;x
 cat_intrigue_society_rank_3_female;Responsable;Responsable;;;;;;;;;;;;x
 cat_intrigue_society_rank_4_male;Grandmaster;Grand maître;;;;;;;;;;;;x
 cat_intrigue_society_rank_4_female;Grandmaster;Grande maîtresse;;;;;;;;;;;;x
-society_no_intrigue_10;Has §Y10§! in intrigue: §R-10§!;A §Y10§! d'intrigue: §R-10§!;;;;;;;;;;;;x
-society_no_intrigue_5;Has §Y5§! in intrigue: §R-10§!;A §Y5§! d'intrigue: §R-10§!;;;;;;;;;;;;x
+society_no_intrigue_10;Do not have §Y10§! in intrigue: §R-10§!;N'a pas §Y10§! d'intrigue: §R-10§!;;;;;;;;;;;;x
+society_no_intrigue_5;Do not have §Y5§! in intrigue: §R-10§!;N'a pas §Y5§! d'intrigue: §R-10§!;;;;;;;;;;;;x
 cat_animal_society_currency;Cat's credit;Crédit de chat;;;;;;;;;;;;x
