--- a/animals_update/localisation/society.csv
+++ b/animals_update/localisation/society.csv
@@ -14,3 +14,31 @@ cat_intrigue_society_rank_4_female;Grandmaster;Grande maîtresse;;;;;;;;;;;;x
 society_no_intrigue_10;Do not have §Y10§! in intrigue: §R-10§!;N'a pas §Y10§! d'intrigue: §R-10§!;;;;;;;;;;;;x
 society_no_intrigue_5;Do not have §Y5§! in intrigue: §R-10§!;N'a pas §Y5§! d'intrigue: §R-10§!;;;;;;;;;;;;x
 cat_animal_society_currency;Cat's credit;Crédit de chat;;;;;;;;;;;;x
+
+### prosperity society
+cat_prosperity_society;Prosperity society;Société de prospérité;;;;;;;;;;;;x
+cat_prosperity_society_desc;Society formed by cat to make prosperous countries;Société formé par les chats pour faire prospérer les pays;;;;;;;;;;;;x
+cat_prosperity_society_rank_1_male;Student;Étudiant;;;;;;;;;;;;x
+cat_prosperity_society_rank_1_female;Student;Étudiante;;;;;;;;;;;;x
+cat_prosperity_society_rank_2_male;Member;Membre;;;;;;;;;;;;x
+cat_prosperity_society_rank_2_female;Membre;Membre;;;;;;;;;;;;x
+cat_prosperity_society_rank_3_male;Responsable;Responsable;;;;;;;;;;;;x
+cat_prosperity_society_rank_3_female;Responsable;Responsable;;;;;;;;;;;;x
+cat_prosperity_society_rank_4_male;Grandmaster;Grand maître;;;;;;;;;;;;x
+cat_prosperity_society_rank_4_female;Grandmaster;Grande maîtresse;;;;;;;;;;;;x
+society_no_learning_8;Do not have §Y8§! in learning: §R-10§!;N'a pas §Y8§! d'érudition: §R-10§!;;;;;;;;;;;;x
+society_no_stewardship_8;Do not have §Y8§! in stewardship: §R-10§!;N'a pas §Y8§! d'intendance: §R-10§!;;;;;;;;;;;;x
+
+### reputation society
+cat_reputation_society;Reputation society;Société de réputation;;;;;;;;;;;;x
+cat_reputation_society_desc;Society formed by cat to make the member famous;Société formé par les chats pour rendre les membres connus;;;;;;;;;;;;x
+cat_reputation_society_rank_1_male;Student;Étudiant;;;;;;;;;;;;x
+cat_reputation_society_rank_1_female;Student;Étudiante;;;;;;;;;;;;x
+cat_reputation_society_rank_2_male;Member;Membre;;;;;;;;;;;;x
+cat_reputation_society_rank_2_female;Membre;Membre;;;;;;;;;;;;x
+cat_reputation_society_rank_3_male;Responsable;Responsable;;;;;;;;;;;;x
+cat_reputation_society_rank_3_female;Responsable;Responsable;;;;;;;;;;;;x
+cat_reputation_society_rank_4_male;Grandmaster;Grand maître;;;;;;;;;;;;x
+cat_reputation_society_rank_4_female;Grandmaster;Grande maîtresse;;;;;;;;;;;;x
+society_no_marital_8;Do not have §Y8§! in martial: §R-10§!;N'a pas §Y8§! de martial: §R-10§!;;;;;;;;;;;;x
+society_no_diplomacy_8;Do not have §Y8§! in diplomacy: §R-10§!;N'a pas §Y8§! de diplomatie: §R-10§!;;;;;;;;;;;;x
