--- a/animals_update/localisation/society.csv
+++ b/animals_update/localisation/society.csv
@@ -6,7 +6,7 @@ cat_intrigue_society_desc;Society formed by cat to make intrigues;Société formé 
 cat_intrigue_society_rank_1_male;Student;Étudiant;;;;;;;;;;;;x
 cat_intrigue_society_rank_1_female;Student;Étudiante;;;;;;;;;;;;x
 cat_intrigue_society_rank_2_male;Member;Membre;;;;;;;;;;;;x
-cat_intrigue_society_rank_2_female;Membre;Membre;;;;;;;;;;;;x
+cat_intrigue_society_rank_2_female;Member;Membre;;;;;;;;;;;;x
 cat_intrigue_society_rank_3_male;Responsable;Responsable;;;;;;;;;;;;x
 cat_intrigue_society_rank_3_female;Responsable;Responsable;;;;;;;;;;;;x
 cat_intrigue_society_rank_4_male;Grandmaster;Grand maître;;;;;;;;;;;;x
@@ -21,7 +21,7 @@ cat_prosperity_society_desc;Society formed by cat to make prosperous countries;S
 cat_prosperity_society_rank_1_male;Student;Étudiant;;;;;;;;;;;;x
 cat_prosperity_society_rank_1_female;Student;Étudiante;;;;;;;;;;;;x
 cat_prosperity_society_rank_2_male;Member;Membre;;;;;;;;;;;;x
-cat_prosperity_society_rank_2_female;Membre;Membre;;;;;;;;;;;;x
+cat_prosperity_society_rank_2_female;Member;Membre;;;;;;;;;;;;x
 cat_prosperity_society_rank_3_male;Responsable;Responsable;;;;;;;;;;;;x
 cat_prosperity_society_rank_3_female;Responsable;Responsable;;;;;;;;;;;;x
 cat_prosperity_society_rank_4_male;Grandmaster;Grand maître;;;;;;;;;;;;x
@@ -35,7 +35,7 @@ cat_reputation_society_desc;Society formed by cat to make the member famous;Soci
 cat_reputation_society_rank_1_male;Student;Étudiant;;;;;;;;;;;;x
 cat_reputation_society_rank_1_female;Student;Étudiante;;;;;;;;;;;;x
 cat_reputation_society_rank_2_male;Member;Membre;;;;;;;;;;;;x
-cat_reputation_society_rank_2_female;Membre;Membre;;;;;;;;;;;;x
+cat_reputation_society_rank_2_female;Member;Membre;;;;;;;;;;;;x
 cat_reputation_society_rank_3_male;Responsable;Responsable;;;;;;;;;;;;x
 cat_reputation_society_rank_3_female;Responsable;Responsable;;;;;;;;;;;;x
 cat_reputation_society_rank_4_male;Grandmaster;Grand maître;;;;;;;;;;;;x
