--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -117,6 +117,8 @@ OPTC_131_DECADENCE_INVASION;A big problems is near;Un gros problème arrive;;;;;;
 DESC_135_SOCIETY_JOIN;I humbly accept you into my society;Tu as toutes les qualités attendu pour rejoindre ma société;;;;;;;;;;;;x
 OPT_135_SOCIETY_JOIN;I am a proper cat;Je suis maintenant un vrai chat;;;;;;;;;;;;x
 OPT_135_NO_JOIN;It is too soon to enter a society;C'est trop tôt pour rentrer dans une société;;;;;;;;;;;;x
+DESC_138_SOCIETY_RU;You will soon receive a quest to assure your promotion inside our society;Tu vas bientôt passer une épreuve pour avoir une promotion au sein de notre société;;;;;;;;;;;;x
+OPT_138_SOCIETY_RU;I am waiting for it;Je l'attend avec impatience;;;;;;;;;;;;x
 
 
 ##tooltips
