--- a/animals_update/localisation/decisions.csv
+++ b/animals_update/localisation/decisions.csv
@@ -212,7 +212,8 @@ cat_society_general_convert_one;Transform someone into a cat;Transforme quelqu'u
 cat_society_general_convert_one_desc;By using society influence, you can force the conversion of someone into a cat;En utilisant l'influence de la société, il est possible de forcer la conversion en chat de quelqu'un;;;;;;;;;;;;x
 cat_society_sabo_power_A;Give a bad omen;Envoyer un mauvais présage;;;;;;;;;;;;x
 cat_society_sabo_power_A_desc;As an intrigue cat, you can give a bad omen;En tant que chat intriguant, il est possible de donner un mauvais présage à quelqu'un;;;;;;;;;;;;x
-
+cat_start_epidemy_power_B;Start an epidemy;Débuter une épidémie;;;;;;;;;;;;x
+cat_start_epidemy_power_B_desc;As an intrigue cat, it is possible to start an apidemy where a target character live;En tant que chat intriguant, il est possible de débuter une épidémie à l'emplacement d'un personnage;;;;;;;;;;;;x
 
 #TOOLTIPS
 CAT_TT_COOLDOWN;Cats are not in action;Aucun chat n'a de comportements étranges;;;;;;;;;;;;x
@@ -222,3 +223,4 @@ CREATED_HOLY_ORDER_CAT_TOOLTIP;[d_Invasive_order.GetName] created;[d_Invasive_or
 CAT_TT_CONVERT_POWER;Is changed into a cat;Est changé en chat;;;;;;;;;;;;x
 CAT_TT_SET_INTR1_NOTIF;Receive a bad omen;Reçoit un mauvais présage;;;;;;;;;;;;x
 CAT_TT_PLOT_DISCOVERY;be discovered;être découvert;;;;;;;;;;;;x
+CAT_TT_START_EPIDEMY;An epidemy start;Une épidémie commence;;;;;;;;;;;;x
